fixed alignment

--- a/src/Webpage/Log-In/Log-In.css
+++ b/src/Webpage/Log-In/Log-In.css
@@ -1,11 +1,9 @@
 #Input-Container{ 
   box-shadow: 0px 0px 56px 7px rgba(224,224,224,1);
-  margin-top:10vh;
-  margin-bottom:50px;
+
   width:25vw; min-width:300px; 
-  height: 60vh; min-height:400px; max-height:500px;
-  position: absolute;
-  left:calc(50% - 12.5vw);
+  height: 60vh; min-height:400px; max-height:450px;
+  margin:30px auto 30px auto;
   background-color:rgb(245, 245, 245);
   border-radius: 5px;
 }
@@ -14,6 +12,9 @@
 { display: flex;
   flex-direction: column;
   align-items: center;
+}
+#Input-Container h1 {
+  padding-top:10px;
 }
 .input-wrapper input
 { display:block;
